--- a/BlazorWebAssembly/TestBlazorAssembly/TestBlazorAssembly.csproj
+++ b/BlazorWebAssembly/TestBlazorAssembly/TestBlazorAssembly.csproj
@@ -13,4 +13,6 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
